# ofbis

./: .cvsignore  AUTHORS  CREDITS  ChangeLog  DESIGN  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  OFBIS-VERSION  README  TODO  VERSION  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  fbtst.c  ltmain.sh  mkinstalldirs  ofbis-config.in  ofbis.m4  ofbis.m4.in
doc/: Makefile.am  Makefile.in  ofbis.doc
src/: Makefile  Makefile.am  Makefile.in  alloc.c  alloc.h  bitblt.c  bitblt.h  char.c  char.h  cmap.c  common.h  error.c  error.h  event.c  event.h  fballoc.c  fballoc.h  fbbitblt.c  fbbitblt.h  fbchar.c  fbchar.h  fbcmap.c  fbconvert.c  fbconvert.h  fbdebug.c  fberror.c  fberror.h  fbevent.c  fbevent.h  fbfuncs.c  fbfuncs.h  fbhline.c  fbhline.h  fbkbd.c  fbkbd.h  fbkeys.h  fbkeytbl.h  fbline.c  fbline.h  fblist.h  (+30 more)
src/display_interleaved/: Makefile.am  funcs.h  i2_1.c  i2_2.c  i2_4.c  i2_8.c  i2_common.h  i2_generic.c
src/display_packed/: Makefile.am  funcs.h  pp_16.c  pp_24.c  pp_32.c  pp_8.c
src/display_planes/: Makefile.am  funcs.h  pl_1.c  pl_2.c  pl_4.c  pl_8.c  pl_common.h  pl_generic.c
src/display_vga/: Makefile.am  funcs.h  vga_4.c
src/fonts/: Makefile  font_6x11.c  font_8x16.c  fonts.h
src/generic/: Makefile.am  bitblt.c  convert.c  funcs.h  hline.c  line.c  putchar.c
src/linea/: Makefile  laentry.S  lafuncs.S  lainit.c  lainit.h  linea.h
