dnl Process this file with autoconf to produce a configure script.
AC_INIT(fbtst.c)
AM_INIT_AUTOMAKE(ofbis, 0.0.6)
AM_CONFIG_HEADER(config.h)
CFLAGS="-Wall -O2 -pipe -fomit-frame-pointer -fno-strength-reduce"
AM_PROG_LIBTOOL

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(select strerror)

AC_OUTPUT(src/Makefile doc/Makefile Makefile)
