dnl Process this file with autoconf to produce a configure script.
AC_INIT(fbtst.c)

. $srcdir/OFBIS-VERSION

dnl libtool versioning
LT_RELEASE=$OFBIS_MAJOR_VERSION.$OFBIS_MINOR_VERSION
LT_CURRENT=`expr $OFBIS_MAJOR_VERSION + $OFBIS_MINOR_VERSION`
LT_REVISION=$OFBIS_MICRO_VERSION
LT_AGE=$OFBIS_MINOR_VERSION
LT_VERSION_INFO="-version-info $LT_CURRENT:$LT_REVISION:$LT_AGE"

dnl Check system type
AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(config.h)

dnl Set CFLAGS
CFLAGS="$CFLAGS -Wall -O2 -pipe -fomit-frame-pointer -fno-strength-reduce"

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Use this instead of AC_PROG_RANLIB because
dnl this works with cross-compiling.
AC_CHECK_TOOL(RANLIB, ranlib, :)

dnl Create libtool
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(select strerror)

dnl Directory to install header files in.
OSISINCLUDE=${includedir}/osis

dnl Export variables.
AC_SUBST(OFBIS_VERSION)
AC_SUBST(LT_VERSION_INFO)
AC_SUBST(OSISINCLUDE)

AC_OUTPUT([
src/Makefile
doc/Makefile
Makefile
ofbis-config
ofbis.m4
])
